; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/bluetooth/extr_l2cap.c_l2cap_send_disconn_req.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/bluetooth/extr_l2cap.c_l2cap_send_disconn_req.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.l2cap_conn = type { i32 }
%struct.sock = type { i32 }
%struct.l2cap_disconn_req = type { i8*, i8* }
%struct.TYPE_2__ = type { i32, i32 }

@L2CAP_DISCONN_REQ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.l2cap_conn*, %struct.sock*)* @l2cap_send_disconn_req to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @l2cap_send_disconn_req(%struct.l2cap_conn* %0, %struct.sock* %1) #0 {
  %3 = alloca %struct.l2cap_conn*, align 8
  %4 = alloca %struct.sock*, align 8
  %5 = alloca %struct.l2cap_disconn_req, align 8
  store %struct.l2cap_conn* %0, %struct.l2cap_conn** %3, align 8
  store %struct.sock* %1, %struct.sock** %4, align 8
  %6 = load %struct.sock*, %struct.sock** %4, align 8
  %7 = call %struct.TYPE_2__* @l2cap_pi(%struct.sock* %6)
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = call i8* @cpu_to_le16(i32 %9)
  %11 = getelementptr inbounds %struct.l2cap_disconn_req, %struct.l2cap_disconn_req* %5, i32 0, i32 1
  store i8* %10, i8** %11, align 8
  %12 = load %struct.sock*, %struct.sock** %4, align 8
  %13 = call %struct.TYPE_2__* @l2cap_pi(%struct.sock* %12)
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i8* @cpu_to_le16(i32 %15)
  %17 = getelementptr inbounds %struct.l2cap_disconn_req, %struct.l2cap_disconn_req* %5, i32 0, i32 0
  store i8* %16, i8** %17, align 8
  %18 = load %struct.l2cap_conn*, %struct.l2cap_conn** %3, align 8
  %19 = load %struct.l2cap_conn*, %struct.l2cap_conn** %3, align 8
  %20 = call i32 @l2cap_get_ident(%struct.l2cap_conn* %19)
  %21 = load i32, i32* @L2CAP_DISCONN_REQ, align 4
  %22 = call i32 @l2cap_send_cmd(%struct.l2cap_conn* %18, i32 %20, i32 %21, i32 16, %struct.l2cap_disconn_req* %5)
  ret void
}

declare dso_local i8* @cpu_to_le16(i32) #1

declare dso_local %struct.TYPE_2__* @l2cap_pi(%struct.sock*) #1

declare dso_local i32 @l2cap_send_cmd(%struct.l2cap_conn*, i32, i32, i32, %struct.l2cap_disconn_req*) #1

declare dso_local i32 @l2cap_get_ident(%struct.l2cap_conn*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
